[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/Enemies/minotaurus/Minotaur - Sprite Sheet.png" type="Texture" id=1]
[ext_resource path="res://general purpose/hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://general purpose/hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://enemies/minotaur/Minotaur.gd" type="Script" id=4]
[ext_resource path="res://enemies/minotaur/charge_trigger.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 4.5, 21 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 2.75, 20.75 )

[sub_resource type="Animation" id=4]
resource_name = "attack"
length = 1.35
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 27, 28, 29, 30, 31, 32, 33, 34, 35 ]
}

[sub_resource type="Animation" id=12]
resource_name = "concussed"
length = 1.35
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 81, 82, 83, 84, 82, 83, 84, 82, 83 ]
}

[sub_resource type="Animation" id=6]
resource_name = "death"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 72, 73, 74, 75, 76, 77 ]
}

[sub_resource type="Animation" id=5]
resource_name = "hit"
length = 0.45
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 63, 64, 65 ]
}

[sub_resource type="Animation" id=1]
resource_name = "idle"
length = 0.75
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=2]
resource_name = "run"
length = 1.2
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12, 13, 14, 15, 16 ]
}

[sub_resource type="Animation" id=3]
resource_name = "taunt"
length = 0.75
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22 ]
}

[sub_resource type="CapsuleShape2D" id=7]
radius = 13.0
height = 16.0

[sub_resource type="CapsuleShape2D" id=8]
radius = 14.0
height = 16.0

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 50, 17 )

[node name="Minotaur" type="KinematicBody2D"]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 9
vframes = 10
frame = 83

[node name="hitbox" parent="Sprite" instance=ExtResource( 3 )]

[node name="CollisionShape2D" parent="Sprite/hitbox" index="0"]
position = Vector2( 17, -8 )
shape = SubResource( 11 )
disabled = true

[node name="chargestop" type="Area2D" parent="Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/chargestop"]
position = Vector2( 14, -8 )
shape = SubResource( 13 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/attack = SubResource( 4 )
anims/concussed = SubResource( 12 )
anims/death = SubResource( 6 )
anims/hit = SubResource( 5 )
anims/idle = SubResource( 1 )
anims/run = SubResource( 2 )
anims/taunt = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -7 )
shape = SubResource( 7 )

[node name="hurtbox" parent="." instance=ExtResource( 2 )]
collision_mask = 16384
parent = NodePath("..")

[node name="CollisionShape2D" parent="hurtbox" index="0"]
position = Vector2( -1, -7 )
shape = SubResource( 8 )

[node name="charge_trigger" type="Area2D" parent="."]
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="charge_trigger"]
position = Vector2( 400, -7 )
shape = SubResource( 10 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="charge_trigger"]
position = Vector2( -400, -7 )
shape = SubResource( 10 )

[connection signal="body_entered" from="Sprite/chargestop" to="." method="_on_chargestop_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="charge_trigger" to="charge_trigger" method="_on_charge_trigger_body_entered"]

[editable path="Sprite/hitbox"]
[editable path="hurtbox"]
